# middleware

nas_ports/freenas/freenas-dscached/: Makefile
nas_ports/freenas/py-freenas.cli/: Makefile
nas_ports/net-mgmt/collectd5/files/: patch-src__geom_stat.c
nas_ports/net-mgmt/netdata/: Makefile  pkg-plist
nas_ports/net-mgmt/netdata/files/: netdata.conf.in  netdata.conf.sample.in
nas_ports/net/samba45/: Makefile  pkg-plist
src/containerd/src/: main.py
src/containerd/src/vnc/templates/: vnc.html
src/datastore/share/: factory.json
src/datastore/share/migrations/config/: 0030-remove-smb-auxiliary.py
src/datastore/share/migrations/directories/: 0009-add-ad-idmap.py
src/datastore/share/migrations/disks/: 0003-strip-spaces-from-disk-serial.py
src/dispatcher/plugins/: BootPlugin.py  DirectoryServicePlugin.py  DiskPlugin.py  DockerPlugin.py  DomainControllerPlugin.py  FilesystemPlugin.py  MigrationPlugin.py  NetworkPortPlugin.py  SMBPlugin.py  VolumePlugin.py
src/dispatcher/plugins/share/: ShareISCSIPlugin.py  ShareSMBPlugin.py
src/dispatcher/src/: balancer.py  main.py  schemas.py  utils.py
src/dscached/libexec/authorized-keys-helper/: CMakeLists.txt  authorized-keys-helper.c
src/dscached/plugins/: LDAPPlugin.py  WinbindPlugin.py
src/dscached/src/: main.py  plugin.py  sid.py  utils.py
src/etcd/plugins/: ctl.py
src/fnstatd/src/: ringbuffer.py
src/freenas-installer/installer/: Install.py  Menu.py  Utils.py
src/logd/src/: main.py
src/middleware-files/etc/: passwd.json
src/middleware-files/usr/local/etc/: smb4.conf
src/serviced/src/: main.py
(+1 files in other folders)
